# tock

./: Cargo.toml
boards/build_scripts/: tock_kernel_layout.ld
boards/components/src/: app_loader.rs  dyn_process_loader.rs  dynamic_binary_storage.rs  i2c_device_scanner.rs  i2c_discovery.rs  lib.rs  nonvolatile_storage.rs  thread_network_manager.rs
boards/configurations/nrf52840dk/: nrf52840dk.mk
boards/configurations/nrf52840dk/nrf52840dk-test-i2c-device-discovery/: Cargo.toml  README.md
boards/configurations/nrf52840dk/nrf52840dk-test-i2c-device-discovery/src/: main.rs
boards/hail/src/: main.rs
boards/imix/src/: main.rs
boards/microbit_v2/: layout.ld
boards/microbit_v2/src/: main.rs
boards/nordic/: nrf52840_chip_layout.ld
boards/tutorials/nrf52840dk-dynamic-apps-and-policies/: layout.ld
capsules/core/src/: console.rs  driver.rs
capsules/extra/: Cargo.toml
capsules/extra/src/: app_loader.rs  i2c_device_scanner.rs  i2c_discovery.rs  lib.rs  nonvolatile_storage_driver.rs  thread_network_manager.rs
chips/nrf52/src/: nvmc.rs
chips/nrf5x/src/: timer.rs
kernel/src/: config.rs  debug.rs  dynamic_binary_storage.rs  kernel.rs  lib.rs  process.rs  process_load_utilities.rs  process_loading.rs
kernel/src/hil/: mod.rs  nonvolatile_storage.rs  virtual_network_interface.rs
secure-boot/: Cargo.toml  Makefile
secure-boot/boards/nrf52840dk/: Cargo.toml  Makefile  layout.ld
secure-boot/common/: Cargo.toml
secure-boot/common/src/: attributes_parser.rs  binary_discovery_table.rs  compute_hash.rs  (+8 more)
tools/: Cargo.toml
tools/ota_app/: ota_uart.py
(+20 files in other folders)
