# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2024.

[package]
name = "nrf52840dk-test-i2c-device-discovery"
version.workspace = true
authors.workspace = true
build = "../../../build.rs"
edition.workspace = true

[features]
default = ["screen_ssd1306"]
screen_ssd1306 = []
screen_sh1106 = []

[dependencies]
components = { path = "../../../components" }
cortexm4 = { path = "../../../../arch/cortex-m4" }
kernel = { path = "../../../../kernel" }
nrf52840 = { path = "../../../../chips/nrf52840" }
segger = { path = "../../../../chips/segger" }
nrf52_components = { path = "../../../nordic/nrf52_components" }

capsules-core = { path = "../../../../capsules/core" }
capsules-extra = { path = "../../../../capsules/extra" }
capsules-system = { path = "../../../../capsules/system" }

[build-dependencies]
tock_build_scripts = { path = "../../../build_scripts" }

[lints]
workspace = true 